SQLite pt4 https://www.connectionstrings.com/sqlite/

--- a/DataAccessRelationalDB/SQLiteUI/appsettings.json
+++ b/DataAccessRelationalDB/SQLiteUI/appsettings.json
@@ -1,3 +1,5 @@
 {
-
+  "ConnectionStrings": {
+    "Default": "Data Source=c:\\repos\\DataAccess\\SQLiteContactsDB\\SQLiteContactsDB.db;Version=3;"
+  }
 }
