--- a/DataAccessRelationalDB/SQLiteUI/SQLiteUI.csproj
+++ b/DataAccessRelationalDB/SQLiteUI/SQLiteUI.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DataAccessLibrary\DataAccessLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
