--- a/DataAccessRelationalDB/SQLiteUI/SQLiteUI.csproj
+++ b/DataAccessRelationalDB/SQLiteUI/SQLiteUI.csproj
@@ -13,4 +13,10 @@
     <ProjectReference Include="..\DataAccessLibrary\DataAccessLibrary.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
