--- a/NoSQLDB/CosmosDBUI/CosmosDBUI.csproj
+++ b/NoSQLDB/CosmosDBUI/CosmosDBUI.csproj
@@ -14,4 +14,10 @@
     <ProjectReference Include="..\DataAccessLibrary\DataAccessLibrary.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
