--- a/NoSQLDB/SampleAPI/SampleAPI.csproj
+++ b/NoSQLDB/SampleAPI/SampleAPI.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DataAccessLibrary\DataAccessLibrary.csproj" />
+  </ItemGroup>
+
 
 </Project>
