--- a/NoSQLDB/SampleAPI/appsettings.json
+++ b/NoSQLDB/SampleAPI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "mongodb://127.0.0.1"
+  }
 }
