--- a/EFCore/EFCore/EFCoreUI/appsettings.json
+++ b/EFCore/EFCore/EFCoreUI/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=(localdb)\\MSSQLLocalDB;Database=EFCoreTestDB;Trusted_Connection=True;"
+    "Default": "Server=(localdb)\\MSSQLLocalDB;Database=EFCoreTestDBContacts;Trusted_Connection=True;"
   }
 }
