--- a/EFCore/EFCore/EFCoreUI/EFCoreUI.csproj
+++ b/EFCore/EFCore/EFCoreUI/EFCoreUI.csproj
@@ -14,4 +14,10 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
